# sample-cf-wasm

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  wrangler.toml
src/: index-test.js  index-wasm.js  index.js
wasm/: Cargo.toml
wasm/src/: lib.rs
