[package]
name = "cf-wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Dependencies for URL parsing
[dependencies]
urlencoding = "2.1"

# No dependencies needed for raw WASM exports - better for static imports

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "s" 